demo-project/first-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-backend
spec:
  selector: 
    app: first-app
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 8080
