demo-project/second-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-backend
spec:
  selector: 
    app: second-app
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 8080
