demo-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /first(/|$)(.*) 
        pathType: Prefix
        backend:
          service:
            name: first-backend
            port:
              number: 80
      - path: /second(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: second-backend
            port:
              number: 80
